# python-analysis-template

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .sqlfluff  DEVELOPMENT.md  Dockerfile  LICENSE  Makefile  README.md  matplotlibrc  myproject.code-workspace  pyproject.toml  requirements-src.txt  requirements.in  requirements.txt  setup.py  setup_venv.sh  taplo.toml
.devcontainer/: Dockerfile  devcontainer.json  requirements.txt
data/: .gitignore
scripts/: build_docs.sh  increment-git-tag.sh  setup_conda.sh  setup_venv.sh
src/: __init__.py  config.py
