[build-system]
requires = ["setuptools >= 64", "setuptools_scm >= 8"]
build-backend = "setuptools.build_meta"

[project]
name = "src"
description = ""
authors = [
  {name = "Guillem Hurault", email = "guillem.hurault@hotmail.fr"}
]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
  "Programming Language :: Python :: 3",
]
dependencies = [
  "matplotlib",
  "pyprojroot",
]
requires-python = ">=3.9"
dynamic = ["version"]

[project.optional-dependencies]
# Additional dependencies, e.g. for the analysis
dev = [
  "ipykernel",
  "ipywidgets",
  "matplotlib",
  "numpy",
  "pandas",
  "pdoc",
  "pip-tools",
  "pre-commit"
]

[project.urls]
# Homepage = ""
# Documentation = ""
# Repository = ""
# Issues = ""

[tool.setuptools_scm]

[tool.isort]
profile = "black"
known_first_party = ["src"]  # Add others local/private packages
# Not distinguishing first_party and local_folder following PEP8 and also for
# consistency as src is used outside the package

[tool.mypy]
ignore_missing_imports = true
